# erlang-fountain

./: .gitignore  README.md  rebar.config
.github/workflows/: erlang.yml
crates/native/: Cargo.toml
crates/native/.cargo/: config
crates/native/src/: atoms.rs  decoder.rs  encoder.rs  lib.rs
src/: erlang_fountain.app.src  erlang_fountain.erl  fountain_decoder.erl  fountain_encoder.erl
test/: basic_test.erl
